--- a/index.html
+++ b/index.html
@@ -1,32 +1,50 @@
 <!DOCTYPE html>
+
 <head>
     <title>San Marcos Adoption Center</title>
     <script>
         const URL = 'http://localhost:8000/'
 
-        function setIH(ID, text){
-            document.getElementById(ID).innerHTML = text;
+        function setIH(ID, text) {
+            var str = "";
+            text.forEach(e => {
+                str = str + `<button onClick=\"getPet('${e}')\" >${e}</button> <br/>`
+            });
+            document.getElementById(ID).innerHTML = str;
         }
 
-        async function getPets(){
-        try{
-            let r = await fetch(URL);
-            let d = await r.json();
-            setIH('pets', d);
+        async function getPet(name) {
+            const json = await fetch(URL + name);
+            const data = await json.json();
+
+            var str = "";
+            str = `Species: ${data.species}<br/>Breed: ${data.breed}<br/>Age: ${data.age}`
+            document.getElementById('petDetail').innerHTML = str;
         }
-        catch(error){
-            console.log('Error fetching pets:',error);
-        }
+
+        async function getPets() {
+            try {
+                let r = await fetch(URL);
+                let d = await r.json();
+
+                setIH('pets', d);
+            }
+            catch (error) {
+                console.log('Error fetching pets:', error);
+            }
         }
     </script>
-    <style src = "style.css"></style>
+    <style src="style.css"></style>
 </head>
+
 <body>
-    <div class = "center">
+    <div class="center">
         <h1>San Marcos Adoption Center</h1>
     </div>
     <h2>Available Pets:</h2>
-    <p id = 'pets'></p>
-    <button onClick = "getPets()">Show Pets</button>
+    <p id='pets'></p>
+    <button onClick="getPets()">Show Pets</button>
+    <p id='petDetail'></p>
 </body>
+
 </html>
