added add pet page

--- a/Frontpage.html
+++ b/Frontpage.html
@@ -12,7 +12,7 @@
             <a href = "Frontpage.html">Home</a>
             <a href = "index.html">Available Pets</a>
             <a href = "update.html">Update Pet Information</a>
-            <a href = "#">Add Pet</a>
+            <a href = "addPet.html">Add Pet</a>
         </div>
         <div id ="wrapper2">
             <b><i>San Marcos Animal Services is dedicated to protecting the pets and people of the City of San Marcos. Our mission is to care for, protect and find quality homes for abandoned and neglected animals, aid in the reduction of pet overpopulation, and provide community education for the mutual benefit of animals and people.</i></b>
