--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         function setIH(ID, text) {
             var str = "";
             text.forEach(e => {
-                str = str + `<button onClick=\"getPetInfo('${e}')\" >${e}</button> <br/> <p id = '${e}''></p> <button onClick =\"adoptPet('${e}')\" >Adopt ${e}</button><br/> <br/> `
+                str = str + `<button onClick=\"getPetInfo('${e}')\" >${e}</button> <br/> <p id = '${e}''></p> <button onClick =\"adoptPet('${e}')\" >Adopt ${e}</button><br/> <br/>`
             });
             document.getElementById(ID).innerHTML = str;
             document.getElementById("petDetail").innerHTML = '';
@@ -58,9 +58,11 @@
                 <a href = "Frontpage.html">Home</a>
                 <a href = "index.html">Available Pets</a>
                 <a href = "update.html">Update Pet Information</a>
-                <a href = "#">Add Pet</a>
+                <a href = "addPet.html">Add Pet</a>
             </div>
             <div id = "div2">
+                <h4>If you're interested in one of our adoptable animals listed below, you can adopt them by clicking the button associated with the pet. </h4>
+                <h4>If you have any questions, stop by our facility, <a href="mailto:animaladoptions@sanmarcostx.gov">email us</a>, or give us a call at (512) 805-2657.</h4>
                 <h2>Available Pets:</h2>
                 <p id='pets'></p>
                 <p id='petDetail'></p>
